--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@biomejs/biome": "^2.2.5",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@resvg/resvg-js": "^2.6.2",
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/vite": "^4.1.14",
     "@tauri-apps/cli": "^2.8.4",
