--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,9 +53,7 @@ jobs:
         id: checksums
         shell: pwsh
         run: |
-          $artifactJson = @'
-${{ steps.tauri-build.outputs.artifactPaths }}
-'@
+          $artifactJson = '${{ steps.tauri-build.outputs.artifactPaths }}'
           $artifacts = $artifactJson | ConvertFrom-Json
           $tmpDir = New-Item -ItemType Directory -Path (Join-Path $env:RUNNER_TEMP "knurl-checksums") -Force
 
