--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -72,3 +72,6 @@ tauri-plugin-single-instance = "2"
 tauri-plugin-dialog = "2"
 tempfile = "3"
 webpki-roots = "0.26"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+rustls-platform-verifier = { version = "0.3" }
