--- a/.github/workflows/release-windows-cross.yml
+++ b/.github/workflows/release-windows-cross.yml
@@ -31,8 +31,13 @@ jobs:
           toolchain: stable
           targets: x86_64-pc-windows-msvc
 
-      - name: Install Zig and JQ
-        run: sudo apt-get update && sudo apt-get install -y zig jq
+      - name: Install JQ
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Install Zig
+        uses: mlugg/setup-zig@v1
+        with:
+          version: 0.12.0
 
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2
